@@ -1,0 +1,24 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.moleculepolarity;
+
+/**
+ * Sim-sharing strings that are specific to this sim.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class MPSimSharing {
+
+    public static final String OBJECT_BOND_ANGLE = "bondAngle";
+    public static final String OBJECT_MOLECULE_ANGLE = "moleculeAngle";
+
+    public static final String PARAM_ANGLE = "angle";
+    public static final String PARAM_ATOM = "atom";
+    public static final String PARAM_COMPONENT = "component";
+    public static final String PARAM_CURRENT_MOLECULE = "currentMolecule";
+    public static final String PARAM_ELECTRONEGATIVITY = "electronegativity";
+    public static final String PARAM_INTERACTIVE = "interactive";
+    public static final String PARAM_NODE = "node";
+
+    public static final String PARAM_VALUE_BOND_CHARACTER_NODE = "BondCharacterNode";
+    public static final String PARAM_VALUE_JMOL_VIEWER_NODE = "jmolViewerNode";
+}
