@@ -5,7 +5,9 @@ import java.awt.event.InputEvent;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.simsharing.SimSharingActions;
 import edu.colorado.phet.common.phetcommon.simsharing.SimSharingEvents;
+import edu.colorado.phet.moleculepolarity.MPSimSharing;
 import edu.colorado.phet.moleculepolarity.common.model.Molecule2D;
 import edu.colorado.phet.moleculepolarity.common.view.AtomNode;
 import edu.colorado.phet.moleculepolarity.common.view.BondAngleArrowsNode;
@@ -29,7 +31,6 @@ public class BondAngleHandler extends PDragSequenceEventHandler {
     private final AtomNode atomNode;
     private final BondAngleArrowsNode arrowsNode;
     private double previousAngle;
-    private final String OBJECT_BOND_ANGLE_DRAG = "bondAngleDrag";
 
     /**
      * Constructor.
@@ -66,7 +67,8 @@ public class BondAngleHandler extends PDragSequenceEventHandler {
         molecule.setDragging( true );
         previousAngle = getAngle( event ); //Store the original angle since rotations are computed as deltas between each event
         arrowsNode.setVisible( false );
-        SimSharingEvents.sendEvent( OBJECT_BOND_ANGLE_DRAG, "started", param( "atom", atomNode.atom.getName() ), param( "angle", bondAngle.get() ) );
+        SimSharingEvents.sendEvent( MPSimSharing.OBJECT_BOND_ANGLE, SimSharingActions.START_DRAG,
+                                    param( MPSimSharing.PARAM_ATOM, atomNode.atom.getName() ), param( MPSimSharing.PARAM_ANGLE, bondAngle.get() ) );
     }
 
     // Drag to rotate the molecule.
@@ -80,7 +82,8 @@ public class BondAngleHandler extends PDragSequenceEventHandler {
     @Override public void endDrag( PInputEvent event ) {
         super.endDrag( event );
         molecule.setDragging( false );
-        SimSharingEvents.sendEvent( OBJECT_BOND_ANGLE_DRAG, "ended", param( "atom", atomNode.atom.getName() ), param( "angle", bondAngle.get() ) );
+        SimSharingEvents.sendEvent( MPSimSharing.OBJECT_BOND_ANGLE, SimSharingActions.END_DRAG,
+                                    param( MPSimSharing.PARAM_ATOM, atomNode.atom.getName() ), param( MPSimSharing.PARAM_ANGLE, bondAngle.get() ) );
     }
 
     // Find the angle about the molecule's location.
