@@ -3,7 +3,9 @@ package edu.colorado.phet.moleculepolarity.common.control;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.simsharing.Parameter;
+import edu.colorado.phet.common.phetcommon.simsharing.SimSharingActions;
 import edu.colorado.phet.common.phetcommon.simsharing.SimSharingEvents;
+import edu.colorado.phet.moleculepolarity.MPSimSharing;
 import edu.colorado.phet.moleculepolarity.common.model.Molecule2D;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.event.PDragSequenceEventHandler;
@@ -20,7 +22,6 @@ public class MoleculeRotationHandler extends PDragSequenceEventHandler {
     private final Molecule2D molecule;
     private final PNode dragNode;
     private double previousAngle;
-    private final String OBJECT_MOLECULE_ROTATION_DRAG = "molecule rotation drag";
 
     public MoleculeRotationHandler( Molecule2D molecule, PNode dragNode ) {
         this.molecule = molecule;
@@ -31,13 +32,15 @@ public class MoleculeRotationHandler extends PDragSequenceEventHandler {
         super.startDrag( event );
         molecule.setDragging( true );
         previousAngle = getAngle( event ); //Store the original angle since rotations are computed as deltas between each event
-        SimSharingEvents.sendEvent( OBJECT_MOLECULE_ROTATION_DRAG, "started", Parameter.param( "angle", molecule.angle.get() ) );
+        SimSharingEvents.sendEvent( MPSimSharing.OBJECT_MOLECULE_ANGLE, SimSharingActions.START_DRAG,
+                                    Parameter.param( MPSimSharing.PARAM_ANGLE, molecule.angle.get() ) );
     }
 
     @Override public void endDrag( PInputEvent event ) {
         super.endDrag( event );
         molecule.setDragging( false );
-        SimSharingEvents.sendEvent( OBJECT_MOLECULE_ROTATION_DRAG, "ended", Parameter.param( "angle", molecule.angle.get() ) );
+        SimSharingEvents.sendEvent( MPSimSharing.OBJECT_MOLECULE_ANGLE, SimSharingActions.END_DRAG,
+                                    Parameter.param( MPSimSharing.PARAM_ANGLE, molecule.angle.get() ) );
     }
 
     // Drag to rotate the molecule.
