@@ -32,6 +32,7 @@ import edu.colorado.phet.common.piccolophet.PhetPCanvas;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.moleculepolarity.MPColors;
+import edu.colorado.phet.moleculepolarity.MPSimSharing;
 import edu.colorado.phet.moleculepolarity.MPStrings;
 import edu.colorado.phet.moleculepolarity.common.model.Element;
 import edu.colorado.phet.moleculepolarity.common.model.Molecule3D;
@@ -99,7 +100,8 @@ public class JmolViewerNode extends PhetPNode {
         viewerPanel = new ViewerPanel( currentMolecule.get(), background, size );
         SimSharingEvents.addDragSequenceListener( viewerPanel, new Function0<Parameter[]>() {
             public Parameter[] apply() {
-                return new Parameter[] { param( "component", "jmolViewerNode" ), param( "currentMolecule", currentMolecule.get().getName() ) };
+                return new Parameter[] { param( MPSimSharing.PARAM_COMPONENT, MPSimSharing.PARAM_VALUE_JMOL_VIEWER_NODE ),
+                        param( MPSimSharing.PARAM_CURRENT_MOLECULE, currentMolecule.get().getName() ) };
             }
         } );
         addChild( new PSwing( viewerPanel ) );
